# bicpl

./: .cvsignore  .gitignore  AUTHORS  BICPLConfig.cmake.in  CMakeLists.txt  ChangeLog  INSTALL.bicpl  Makefile  Makefile.am  Makefile.include  Makefile.msvc-win32  Makefile.objects  NEWS  README  README.CVS  README.release  TODO  UseBICPL.cmake.in  acinclude.m4  autogen.sh  config.h.cmake  config.h.msvc-win32  configure.ac  configure.in  doxygen_config  epm-header.in  mni_bicpl.epm.header  version.c
Data_structures/: .cvsignore  Makefile.am  bintree.c  bitlist.c  build_bintree.c  hash2_table.c  hash_table.c  object_bintrees.c  point_bintree.c  ray_bintree.c  ray_bintree.c.new  skiplist.c
Deform/: .cvsignore  Makefile.am  deform_line.c  find_in_direction.c  intersect_voxel.c  model_objects.c  models.c  search_utils.c
Documentation/: .cvsignore  Changes.list  Makefile.am  bicpl.aux  bicpl.dvi  bicpl.tex  bicpl.toc  doxygen.config.in  groups.dox  lines_format.txt  mni_obj_format.tex  mni_tag_format.tex  perturb_surface_normal.tex  polygons_format.txt
Geometry/: Makefile.am  approx_sqrt.c  clip_3d.c  closest_point.c  curvature.c  flatten.c  generate_tube.c  geodesic_distance.c  geometry.c  intersect.c  lfit_vector.c  line_circle.c  map_polygons.c  path_surface.c  plane_polygon_intersect.c  platonics.c  points.c  poly_dist.c  polygon_sphere.c  ray_intersect.c  rotmat_to_ang.c.new  segment_polygons.c  smooth_curvature.c  smooth_lines.c  smooth_polygons.c  solve_plane.c  solve_plane.c.new  subdivide_lines.c  subdivide_polygons.c  surface_area.c  t.c  tetrahedrons.c  tubes.c  volume_slice.c
Images/: Makefile.am  crop_image.c  rgb_io.c  (+3 more)
Include/: Makefile.am  amoeba.h  bicpl.h  bicpl_internal.h  bintree.h  bitlist.h  colour_coding.h  colours.h  compute_tps.h  compute_xfm.h  data_structures.h  deform.h  ds_prototypes.h  geom.h  geom_prototypes.h  global_lookup.h  global_variables.h  globals.h  hash.h  histogram.h  image_prototypes.h  images.h  marching.h  marching_cube_data.h  marching_cubes.h  matrix_basics.h  minimization.h  module.h  numeric_prototypes.h  numerical.h  obj_defs.h  object_prototypes.h  objects.h  priority_queue.h  prog_utils.h  queue.h  rotmat_to_ang.h  skiplist.h  splines.h  stack.h  (+4 more)
Include/Proto/: ds_prototypes.h  ds_prototypes.h,v  geom_prototypes.h  geom_prototypes.h,v  numeric_prototypes.h  numeric_prototypes.h,v  object_prototypes.h  object_prototypes.h,v  prog_prototypes.h  prog_prototypes.h,v  trans_prototypes.h  trans_prototypes.h,v  vol_prototypes.h  vol_prototypes.h,v
Include/bicpl/: Makefile.am  amoeba.h  bintree.h  bitlist.h  colour_coding.h  colours.h  compute_xfm.h  data_structures.h  deform.h  deform_prototypes.h  ds_prototypes.h  geom.h  geom_prototypes.h  global_lookup.h  globals.h  hash.h  histogram.h  image_prototypes.h  images.h  march_prototypes.h  marching.h  marching_cubes.h  minimization.h  numeric_prototypes.h  numerical.h  obj_defs.h  object_prototypes.h  objects.h  priority_queue.h  prog_prototypes.h  prog_utils.h  queue.h  skiplist.h  splines.h  stack.h  statistics.h  trans.h  trans_prototypes.h  vol_prototypes.h  vols.h
Numerical/: Makefile.am  amoeba.c  amoeba.c.save  gaussian.c  gradient_minimize.c  histogram.c  least_squares.c  matrix_svd.c  minimize_lsq.c  minimize_lsq_float.c  minimize_lsq_include.c  minimize_lsq_include.c.conjugate_grad  numerical.c  quadratic.c  real_quadratic.c  splines.c  statistics.c  t_stat.c  tensors.c
Objects/: Makefile.am  brainsuite_io.c  coalesce.c  colours.c  freesurfer_io.c  generate_tube.c  graphics_io.c  landmark_file.c  lines.c  lines.c.new  markers.c  models.c  o.c  object_io.c  objects.c  pixels.c  ply_io.c  poly_neighs.c  polygons.c  quadmesh.c  rgb_lookup.c  tag_objects.c  text.c  texture_values.c  trackvis_io.c  tubes.c  wavefront_io.c
Testing/: .cvsignore  :w  CMakeLists.txt  Makefile  Makefile.am  ParseArgv.h  conversions.h  global_variables.h  globals.input  image.rgb  mnifile.h  postf4.c  r.c  r2.c  r3.c  ray_intersect.c  render_speed.c  t.c  test_amoeba.c  test_bintree.c  test_filter_speed.c  test_filter_speed2.c  test_flatten.c  test_globals.c  test_gradient.c  test_hash.c  test_mapping.c  test_obj_io.c  test_pixel_io.c  test_prediction.c  test_prediction_3d.c  test_procrustes.c  test_render.c  test_rgb_io.c  test_rotmat.c  test_sphere.c  test_splines.c  test_volume.c  test_weights.c
Transforms/: Makefile.am  compute_tps.c  compute_xfm.c  matrix_basics.c  optimize.c  procrustes.c  rotmat_to_ang.c  safe_compute_xfm.c  transform_io.c  transforms.c
Volumes/: Makefile.am  box_filter.c  box_filter.c.new  call_rend_f_include.c  change_labels.c  col_code_io.c  col_code_points.c  colour_coding.c  create_slice.c  crop_volume.c  dilate.c  evaluate.c  fill_volume.c  filters.c  input.c  interpolate.c  labels.c  labels.c.new  labels.c.save  landmark_file.c  make_render_funcs.pl  make_render_in_function.pl  mapping.c  output_free.c  rend_f.c  rend_f_include.c  render.c  render.c.new  render_funcs_include.c  render_include.c  render_include1.c  render_include2.c  render_include3.c  resample.c  scan_lines.c  scan_markers.c  scan_objects.c  scan_polygons.c  smooth.c  talairach.c
bicpl_clapack/: .cvsignore  F77_aloc.c  Makefile.am  blaswrap.h  d_sign.c  dbdsqr.c  dgebrd.c  dgemv.c  dgesvd.c  dlamch.c  exit_.c  f2c.h  ilaenv.c  pow_dd.c  pow_di.c  s_cat.c  s_cmp.c  s_copy.c  xerbla.c
tools/: .cvsignore  CMakeLists.txt  Makefile.am  ParseArgv.c  ParseArgv.h  add_surfaces.c  ascii_binary.c  average_objects.c  average_surfaces.c  bicobj2oogl.c  bicobj2ply.c  bicobj2vtk.c  check_polygons.c  colour_object.c  convert_object.c  copy_colours.c  create_grid.c  create_rectangle.c  create_tetra.c  diff_points.c  diff_surfaces.c  dump_curvatures.c  dump_point_diffs.c  dump_points.c  dump_polygons.c  dump_vertex_normal_diffs.c  expand_object_along_surface_normal.c  half_polygons.c  make_colour_bar.c  make_concentric_surface.c  make_mesh_map.c  manifold_polygons.c  measure_surface_area.c  merge_polygons.c  obj2brainvisa.c  objconcat.c  perturb_surface.c  perturb_surface_normal.c  ply.c  ply.h  (+21 more)
(+15 files in other folders)
