dnl Process this file with autoconf to produce a configure script.

AC_INIT(Include/bicpl.h)
AC_PREREQ(2.50)
AM_INIT_AUTOMAKE(bicpl, 1.3.8)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Build only static libs by default
AM_DISABLE_SHARED
AM_PROG_LIBTOOL

dnl Add extra include or link directories
smr_WITH_BUILD_PATH

smr_REQUIRED_LIB(m,sqrt,math.h)
smr_REQUIRED_LIB(netcdf,ncopen,netcdf.h)
smr_REQUIRED_LIB(minc,miicv_create,minc.h)
smr_REQUIRED_LIB(volume_io,input_volume,volume_io.h)


dnl Decide which file format is used for images.
dnl Prefer PPM if available, otherwise use SGI's irisimage,
dnl otherwise no image I/O is possible

imageio_GLUE_CODE=rgb_io_none.c

smr_OPTIONAL_LIB(ppm,ppm_writeppminit,ppm.h,[-lpgm -lpbm])

if test $HAVE_libppm = yes; then
    imageio_GLUE_CODE=rgb_io_ppm.c
else
    smr_OPTIONAL_LIB(image,iopen,image.h)
    if test $HAVE_libimage = yes; then
	imageio_GLUE_CODE=rgb_io_sgi.c
    fi
fi

AC_DEFINE_UNQUOTED(imageio_GLUE_CODE,
    ["$imageio_GLUE_CODE"],[File to include in Images/rgb_io.c])




dnl AC_CHECK_TYPE(bool,int)

AC_OUTPUT( 
Makefile
Data_structures/Makefile
Documentation/Makefile Documentation/doxygen.config
Geometry/Makefile
Images/Makefile
Include/Makefile Include/bicpl/Makefile
Marching_cubes/Makefile
Numerical/Makefile
Objects/Makefile
Prog_utils/Makefile
Testing/Makefile
Transforms/Makefile
Volumes/Makefile
tools/Makefile
)
