AM_CPPFLAGS = -I$(top_srcdir)/Include

noinst_LTLIBRARIES = libbicpl_ds.la
libbicpl_ds_la_SOURCES = \
                  bintree.c \
                  bitlist.c \
                  build_bintree.c \
                  hash_table.c \
                  hash2_table.c \
                  object_bintrees.c \
                  point_bintree.c \
                  ray_bintree.c \
                  skiplist.c
