AM_CPPFLAGS = -I$(top_srcdir)/Include

noinst_LTLIBRARIES = libbicpl_g.la
libbicpl_g_la_SOURCES = \
               approx_sqrt.c \
               clip_3d.c \
               closest_point.c \
               curvature.c \
               flatten.c \
               geodesic_distance.c \
               geometry.c \
               intersect.c \
               line_circle.c \
               map_polygons.c \
               path_surface.c \
               platonics.c \
               plane_polygon_intersect.c \
               points.c \
               poly_dist.c \
               polygon_sphere.c \
               ray_intersect.c \
               segment_polygons.c \
               smooth_curvature.c \
               smooth_lines.c \
               smooth_polygons.c \
               solve_plane.c \
               subdivide_lines.c \
               subdivide_polygons.c \
               surface_area.c \
               tetrahedrons.c \
               tubes.c \
               volume_slice.c

