# We install the main header, bicpl.h into $includedir (${prefix}/include), 
# and the rest of the headers into $pkgincludedir (${prefix}/include/bicpl).  
#
# This allows the library user to code "#include <bicpl.h>", using
# "-I$prefix/include" on the compiler command line.

SUBDIRS = bicpl
include_HEADERS = bicpl.h
noinst_HEADERS = bicpl_internal.h
