AM_CPPFLAGS = -I$(top_srcdir)/Include

noinst_LTLIBRARIES = libbicpl_o.la
libbicpl_o_la_SOURCES = \
                coalesce.c \
                colours.c \
                graphics_io.c \
                landmark_file.c \
                lines.c \
                markers.c \
                models.c \
                object_io.c \
                objects.c \
                pixels.c \
                poly_neighs.c \
                polygons.c \
                quadmesh.c \
                rgb_lookup.c \
                tag_objects.c \
                text.c \
                texture_values.c
